# text-to-voice

./: .gitignore  README.md  pyproject.toml
src/: readPdf.py
utils/: read_file_manager.py  voice_clone_manager.py
